# CppMatrix

./: CMakeLists.txt  s21_matrix_oop.h
src/: Makefile  methods.cc  operators.cc  special_member_func.cc  utils.cc
src/lib/: methods.cc  operators.cc  special_member_func.cc  utils.cc
src/tests/: tests.cc  tests.h  tests_methods.cc  tests_operators.cc  tests_special_member_func.cc  tests_utils.cc
